# FlexC

./: .gitignore  CMakeLists.txt  README.md
documents/: Lexical analyzer.xml  grammatic.txt  need to do  need to do.txt
examples/example_1/: input.txt  poliz.txt
examples/example_for/: input.txt  poliz.txt
src/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  lexical_analyzer.cpp  lexical_analyzer.hpp  main.cpp  parser.cpp  parser.hpp
